tests/context_with_equals_bad.stderr
tests/context_with_equals_bad.sl:2:16: error: SL1004: unexpected token
